User can edit contact inline. Add best in place gem, and refactor specs and views.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,18 @@
   top: -20px;
   left: 70px;
 
-  box-sizing: border-box;
   width: 800px;
+  box-sizing: border-box;
+}
+
+.best_in_place {
+  display: block;
+  width: 168px;
+
+  .form_in_place {
+    input {
+      width: 90%;
+      margin-bottom: 0;
+    }
+  }
 }
