--- a/app/views/application/index.haml
+++ b/app/views/application/index.haml
@@ -2,20 +2,15 @@
   .span6
     %h4 Contacts
 
-    %table#contacts.table.table-condensed.table-hover
+    %table#contacts.table.table-hover
       %thead
         %tr
-          %th Name
-          %th Phone
-          %th Action
+          %th(width=150) Name
+          %th(width=150) Phone
+          %th(width=65) Action
       %tbody
-        - @contacts.each do |contact|
-          %tr{"data-test-name" => "contact"}
-            %td{"data-test-name" => "contact_name"}= contact.name
-            %td{"data-test-name" => "contact_phone"}= contact.phone
-            %td
-              = fa_icon "trash"
-              = link_to "Delete", contact_path(contact), method: :delete, remote: true, class: "delete", "data-test-name" => "delete_link"
+        = render "contact", contact: Contact.new, html_class: "template hide"
+        = render partial: "contact", collection: @contacts, locals: { html_class: "" }
 
   .span6
     %h4 Add a Contact
